linux window换行引起的编译问题，不能打包，修改build.xml 添加encoding=utf-8

--- a/tests/html/all-debug.html
+++ b/tests/html/all-debug.html
@@ -5,7 +5,7 @@
 <script type="text/javascript">
     var abc = 1;
     function abc(){
-        console.log('<strong class="more" onclick = "Instances(\'' + abc  + '\').expendMore(this)">¸ü¶à <b></b></strong>');
+        console.log('<strong class="more" onclick = "Instances(\'' + abc  + '\').expendMore(this)">æ›´å¤š<b></b></strong>');
         "abc".replace(/a(b)c/g,'\$');
     }
 </script>
@@ -17,7 +17,7 @@
         console.log(123);
     }
 </script>
-<style type="text/css">
+	<style type="text/css">
     .test {
         width: 10px;
         height: 10px;
@@ -25,11 +25,11 @@
         background-color: red;
     }
     #testId:before{
-        content: "\"'\$adf";
+        content: "";
         width:100px;
         height:100px;
     }
-</style>
+ 	</style>
 <div>
 	<ul>
 		<li></li>
